# pyprotect

./: .flake8  .gitignore  BUILD.txt  INSTALL.TXT  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  classdiagram.puml  cythonize.sh  gpg_sign.sh  help_pyprotect.sh  install.sh  setup.cfg  setup.py  signature.asc  signed_files.txt
docs/: BUILD.TXT  Packaging.md  Scripts.md  classdiagram.puml
protected_class/: __init__.py  doc.py  protected.c  protected.pyx
pyprotect/: HiddenPartial.pxi  PrivacyDict_FrozenPrivacyDict.pxi  Private_FrozenPrivate.pxi  Protected_FrozenProtected.pxi  ProtectionData.pxi  Proxy.pxi  Wrapped_Frozen.pxi  __init__.py  doc.pxi  doc.py  global_c_functions.pxi  global_cdefs.pxi  imports.pxi  protected.c  protected.pyx  python_visible.pxi  version_extname.ini
scripts/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.pypy2  Dockerfile.arch  Dockerfile.fedora  Dockerfile.ubuntu  README.txt  build_PY2_PY3_in_place.sh  build_in_place_docker.sh  build_in_place_in_docker.sh  build_inplace.sh  build_test_inplace.sh  check_pypirc_python3.py  check_sha256.sh  check_sig.sh  clean.sh  clean_build.sh  common_functions.sh  config.sh  config.sh.ubuntu  config_docker_alpine.sh  config_docker_arch.sh  config_docker_fedora.sh  config_docker_ubuntu.sh  config_source_validate.sh  cythonize.sh  cythonize_inplace.sh  docker_as.sh  docker_as_root.sh  docker_as_user.sh  docker_build.sh  docker_config.sh  generic_bash_functions.sh  gpg_sign.sh  host_build_in_place.sh  host_build_test_in_place.sh  host_build_test_inplace.sh  host_docker_build.sh  host_install_test.sh  (+18 more)
(+86 files in other folders)
