
[metadata]
name = pyprotect
license = BSD
author = Sundar Nagarajan'
author_email = sun.nagarajan@gmail.com
url = https://github.com/sundarnagarajan/python_protected_class
description = Protect class attributes in any python object instance
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Cython
    License :: OSI Approved :: BSD License
keywords =
    private private_attributes frozen immutable freeze
    frozen_object immutable_object freeze_object
project_urls =
    Source = https://github.com/sundarnagarajan/python_protected_class
    Tracker = https://github.com/sundarnagarajan/python_protected_class/issues
    Documentation = https://github.com/sundarnagarajan/python_protected_class/blob/main/README.md


[options]
zip_safe = True
include_package_data = True

[options.package_data]
c = *.c
pyx = *.pyx

